Closed Bug 476811 Opened 17 years ago Closed 17 years ago

A "waiting" event isn't fired when playback freezes for lack of data

Categories

(Core :: Audio/Video, defect, P2)

x86
macOS
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: Dolske, Assigned: roc)

References

()

Details

(Keywords: verified1.9.1)

Attachments

(1 file)

When playing a video, if it's consuming buffer data faster than the network is providing it, eventually the playback freezes because it runs out of data. The network is still active, it's just not sending bits fast enough. The video spec says a "waiting" event should be fired when "Playback has stopped because the next frame is not available, but the user agent expects that frame to become available in due course.". This event doesn't ever seem to fire. I wrote a little PHP script to trickle out an Ogg at a slow rate, and confirmed that an event listener never gets a "waiting". http://dolske.net/mozilla/tests/video/slowsend.php?rate=64 The spec also seems to says that "waiting" can be fired during seeks (4.8.10.10), I don't see it happen there either. I do see "seeking" and "seeked" events, which are an acceptable workaround.
Flags: wanted1.9.1?
We should provide this, it's fairly easy.
Assignee: nobody → roc
Flags: wanted1.9.1? → blocking1.9.1+
Priority: -- → P2
Attached patch fixSplinter Review
Not sure how to test this without locking up httpd.js...
Attachment #361214 - Flags: review?(chris.double)
Whiteboard: [needs review]
Attachment #361214 - Flags: review?(chris.double) → review+
Whiteboard: [needs review] → [needs landing]
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
Verified FIXED on 1.9.1 branch and 1.9.2 trunk Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090604 Shiretoko/3.5pre Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090604 Minefield/3.6a1pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: