Bug 476811. Fire 'waiting' event when the decoder starts buffering. r=doublec